update:styling navbar

--- a/frontend/styles/main.scss
+++ b/frontend/styles/main.scss
@@ -1,5 +1,46 @@
+body {
+  background-color: #e4e6eb;
+  font-family: "Assistant", sans-serif;
+  color: #071c4d;
+}
+
 .navbar-brand {
   img {
     max-height: 40px;
+  }
+}
+
+.navbar-light {
+  .navbar-nav {
+    .nav-link {
+      color: #071c4d;
+
+      &.active {
+        font-weight: bold;
+        color: #071c4d !important;
+      }
+
+      &:hover {
+        color: #252525;
+      }
+    }
+  }
+}
+
+.btn-navbar-right {
+  margin-top: -10px !important;
+  margin-bottom: -8px !important;
+
+  height: 70px;
+  border-radius: 0;
+}
+
+.btn-login {
+  background-color: #071c4d;
+  color: #ffffff;
+
+  &:hover {
+    background-color: #1e3771;
+    color: #ffffff;
   }
 }
