--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -1,3 +1,36 @@
+body {
+  background-color: #e4e6eb;
+  font-family: "Assistant", sans-serif;
+  color: #071c4d;
+}
+
 .navbar-brand img {
   max-height: 40px;
+}
+
+.navbar-light .navbar-nav .nav-link {
+  color: #071c4d;
+}
+.navbar-light .navbar-nav .nav-link.active {
+  font-weight: bold;
+  color: #071c4d !important;
+}
+.navbar-light .navbar-nav .nav-link:hover {
+  color: #252525;
+}
+
+.btn-navbar-right {
+  margin-top: -10px !important;
+  margin-bottom: -8px !important;
+  height: 70px;
+  border-radius: 0;
+}
+
+.btn-login {
+  background-color: #071c4d;
+  color: #ffffff;
+}
+.btn-login:hover {
+  background-color: #1e3771;
+  color: #ffffff;
 }/*# sourceMappingURL=main.css.map */
